--- a/content/zh-cn/docs/11_about/更新日志.md
+++ b/content/zh-cn/docs/11_about/更新日志.md
@@ -3,3 +3,43 @@ title: "更新日志"
 linkTitle: "更新日志"
 weight: 1
 ---
+
+## v5.0.0(2023-07-26)
+
+### ⭐ New Features
+
+- 基于spring-boot 2.7.x的应用开发框架
+- 基于spring-cloud 2021.x的微服务开发框架
+  提供如下集成：
+- macula-boot-starter-mapstruct 对象转换
+- macula-boot-starter-crypto 加解密模块
+- macula-boot-starter-cache 多级缓存
+- macula-boot-starter-redis REDIS（基于Redisson）
+- macula-boot-starter-lock4j 分布式锁
+- macula-boot-starter-idempotent 幂等
+- macula-boot-starter-leaderelection 基于Redis的Leader选择器
+- macula-boot-starter-mybatis-plus MyBatis Plus
+- macula-boot-starter-jpa JPA集成
+- macula-boot-starter-sender 基于本地数据库发送MQ消息（先落库再异步发MQ）
+- macula-boot-starter-rocketmq RocketMQ
+- macula-boot-starter-liteflow 可编排的组件引擎
+- macula-boot-starter-statemachine 基于Spring StateMachine的状态机
+- macula-boot-starter-security 基于Token的安全校验
+- macula-boot-starter-springdoc Swagger Doc v3
+- macula-boot-starter-web WEB
+- macula-boot-starter-feign Feign定制，使用OkHTTP
+- macula-boot-starter-seata 分布式事务
+- macula-boot-starter-oss 资源中心(minio/aliyun/cos/aws s3/本地)
+- macula-boot-starter-tinyid ID生产
+- macula-boot-starter-system 接入菜单和权限等系统服务
+- macula-boot-starter-task 基于xxljob等的定时任务（类似阿里云的ScheduleX）
+- macula-boot-starter-retry 重试框架
+- macula-boot-starter-dubbo 基于Dubbo的RPC服务
+- macula-boot-starter-cloud 基于Spring Cloud的RPC服务
+- macula-boot-starter-gateway 网关定制，基于Oauth2认证，权限控制也集中在网关
+- macula-boot-starter-alibaba 基于alibaba spring cloud体系（nacos、sentinel、seata）
+- macula-boot-starter-alibaba-scg 基于slibaba的gateway定制
+- macula-boot-starter-tencent 基于tencent的polarismesh服务治理体系
+- macula-boot-starter-tecent-scg 基于tencent的gateway定制
+- macula-boot-starter-tsf 基于TSF的服务治理体系
+- macula-boot-starter-tsf-scg 基于TSF的网关定制
