--- a/content/zh-cn/docs/03_devrules/后端开发规范/工程规约/应用分层.md
+++ b/content/zh-cn/docs/03_devrules/后端开发规范/工程规约/应用分层.md
@@ -16,7 +16,33 @@ weight: 1
 
 ![image](../../images/model-small.png)
 
-### 对象模型说明(Query,Form,DTO,VO,BO,Entity)
+### 工程目录
+
+![image](../../images/structure.png)
+
+### 各层规约
+
+#### 展示层
+
+1. 【强制】Controller方法不要直接返回Result包裹类，框架会根据返回结果自动封装为Result结构返回，具体见[Macula Boot Starter Web](../../../../01_services/框架基础/web)
+2. 【强制】Controller方法体里面不要编写业务逻辑，只做简单的Service方法的编排
+3. 【推荐】Controller方法参数建议添加@Validated注解，用于参数校验
+4. 【强制】Controller方法不要吃掉异常，如果没有特殊需要，直接抛出服务层异常即可
+
+#### 业务逻辑层
+
+1. 【强制】Service方法需要考虑事务，一个Service方法应该是事务一致的
+2. 【强制】Service方法需要根据错误情况抛出对应异常，抛出的异常要继承自BizException
+
+#### 数据存取层
+
+1. 【推荐】建议使用mybatis-plus或者jpa框架
+2. 【强制】不要通过拼接字符串的方式编写SQL
+3. 【强制】不要在Java代码中拼接SQL
+
+
+
+#### 各层对象传递说明(Query,Form,DTO,VO,BO,Entity)
 
 业内涉及分层架构的模型对象多种多样，如VO、DTO、AO、BO、PO、DO、Entity等，但大家的理解和用法各异。在此，Macula选取以下模型并明确定义其使用场景，如下图所示：
 
@@ -33,3 +59,9 @@ weight: 1
 ![image](../../images/model2.png)
 
 详细样例请看：https://github.com/macula-projects/macula-samples
+
+
+
+## DDD架构
+
+TODO
