后端规范整理

--- a/content/zh-cn/docs/03_devrules/后端开发规范/应用分层.md
+++ b/content/zh-cn/docs/03_devrules/后端开发规范/应用分层.md
@@ -1,7 +1,7 @@
 ---
 title: "应用分层"
 linkTitle: "应用分层"
-weight: 1
+weight: 3
 ---
 
 ## 概述
@@ -14,11 +14,11 @@ weight: 1
 
 经典三层架构如下图所示：
 
-![image](../../images/model-small.png)
+![image](../images/model-small.png)
 
 ### 工程目录
 
-![image](../../images/structure.png)
+![image](../images/structure.png)
 
 ### 各层规约
 
@@ -46,7 +46,7 @@ weight: 1
 
 业内涉及分层架构的模型对象多种多样，如VO、DTO、AO、BO、PO、DO、Entity等，但大家的理解和用法各异。在此，Macula选取以下模型并明确定义其使用场景，如下图所示：
 
-![image](../../images/layer-model.png)
+![image](../images/layer-model.png)
 
 + Query查询对象：查询的时候使用，可以透传Controller，Service，Mapper三层
 + Form表单对象和DTO传输对象：更新的时候使用
@@ -56,7 +56,7 @@ weight: 1
 
 以上模型对象的定义和使用，同样适用于平台内部微服务间的调用以及跨平台的openapi交互场景。如下图所示：
 
-![image](../../images/model2.png)
+![image](../images/model2.png)
 
 详细样例请看：https://github.com/macula-projects/macula-samples
 
