--- a/content/zh-cn/docs/03_devrules/后端开发规范/微服务规约.md
+++ b/content/zh-cn/docs/03_devrules/后端开发规范/微服务规约.md
@@ -1,7 +1,7 @@
 ---
 title: "微服务规约"
 linkTitle: "微服务规约"
-weight: 2
+weight: 4
 ---
 
 ## 概述
@@ -10,11 +10,11 @@ weight: 2
 
 ## 微服务架构
 
-![架构](../../images/microservice.png)
+![架构](../images/microservice.png)
 
 ## 工程目录
 
-![工程结构](../../images/mca-archetype.png)
+![工程结构](../images/mca-archetype.png)
 
 | 模块名称                      | 说明                                                         |
 | ----------------------------- | ------------------------------------------------------------ |
