--- a/content/zh-cn/docs/04_devmanual/开发环境准备.md
+++ b/content/zh-cn/docs/04_devmanual/开发环境准备.md
@@ -50,7 +50,7 @@ weight: 1
 
 解压apache-maven-3.9.5-bin.zip，将maven的bin目录加入到环境变量如下图
 
-![maven-setting](../images/maven-setting.png)
+![maven-setting](./images/maven-setting.png)
 
 ● IDEA安装
 
