--- a/content/zh-cn/docs/04_devmanual/创建服务模块.md
+++ b/content/zh-cn/docs/04_devmanual/创建服务模块.md
@@ -19,7 +19,8 @@ weight: 5
 *（pom文件引入需要的starter依赖、修改macula-samples平台上下文的PaaS组件配置）*
 
 ```xml
-<!-- web应用基础依赖包， 统一处理返回对象及异常等 --><dependency>
+<!-- web应用基础依赖包， 统一处理返回对象及异常等 -->
+<dependency>
     <groupId>dev.macula.boot</groupId>
     <artifactId>macula-boot-starter-web</artifactId>
 </dependency>
