修复图片显示

--- a/content/zh-cn/docs/04_devmanual/创建服务模块.md
+++ b/content/zh-cn/docs/04_devmanual/创建服务模块.md
@@ -70,7 +70,7 @@ weight: 5
 
 应用实体表：
 
-![image](./images/db_app.png)
+![image](../images/db_app.png)
 
 ```sql
 CREATE TABLE `application`
@@ -95,7 +95,7 @@ CREATE TABLE `application`
 
 秘钥实体表：
 
-![image](./images/db_kms.png)
+![image](../images/db_kms.png)
 
 ```sql
  CREATE TABLE `kms` (
@@ -926,7 +926,7 @@ public class ApplicationController {
 
 * 项目结构
 
-![image](./images/vue_project_directory.png)
+![image](../images/vue_project_directory.png)
 
 * VUE页面
 
