--- a/content/zh-cn/docs/04_devmanual/打包部署.md
+++ b/content/zh-cn/docs/04_devmanual/打包部署.md
@@ -155,17 +155,17 @@ cd ./shorturl-parent;mvn versions:set -DnewVersion="dev"-$CI_TIME'''
 
 * 配置构建计划的触发规则、变量与缓存（流程配置中用到的变量在这里定义），如下：
 
-![image](./images/coding_ci_vm_variable.png)
+![image](../images/coding_ci_vm_variable.png)
 
 到这步构建计划已经配置完成了，可以点击“立即构建”并观察是否可以构建成功。如成功则可以进行下一步操作。
 
 * 创建流程，这里可以配置自动触发器、人工确认节点、主机部署，如下图：
 
-![image](./images/coding_ci_vm_setting.png)
+![image](../images/coding_ci_vm_setting.png)
 
 * 最后配置主机部署环节，这里可以配置主机组、部署策略、前置脚本（部署前需要执行的脚本，如：关闭服务，备份等）、制品下载（指定包在仓库的位置）、后置脚本（部署时需要执行的脚本，如：启动命名），如下图：
 
-![image](./images/coding_ci_vm_setting_detail.png)
+![image](../images/coding_ci_vm_setting_detail.png)
 
 前置脚本，内容如下：
 
@@ -183,7 +183,7 @@ mv /work/shorturl_openapi/shorturl-openapi-0.0.1-SNAPSHOT.jar /work/shorturl_ope
 
 制品下载
 
-![image](./images/coding_cd_package_vm.png)
+![image](../images/coding_cd_package_vm.png)
 
 后置脚本，内容如下：
 
@@ -218,7 +218,7 @@ ENTRYPOINT [ "sh", "-c", "java -jar ${JAVA_OPTS} macula-cloud-system.jar" ]
 
 * 配置构建计划的基础信息，如：代码仓库、配置来源、节点池配置，具体下图所示：
 
-![image](./images/coding_ci_info.png)
+![image](../images/coding_ci_info.png)
 
 * 配置构建计划的流程配置，这里包含了代码检出、编译打包、构建镜像、把镜像推送到指定的仓库，具体如下：
 
@@ -262,20 +262,20 @@ pipeline {
 
 * 配置构建计划的触发规则、变量与缓存（流程配置中用到的变量在这里定义），如下：
 
-![image](./images/coding_ci_variable_2.png)
+![image](../images/coding_ci_variable_2.png)
 
 到这步构建计划已经配置完成了，可以点击“立即构建”并观察是否可以构建成功。如成功则可以进行下一步操作。
 
 * 服务管理中创建服务，需要指定镜像仓库、服务启动占用的端口号、安全组和资源限制，如下图：
 
-![image](./images/coding_cd_k8s_info.png)
+![image](../images/coding_cd_k8s_info.png)
 
 * 创建环境，主要在这里维护当前环境各个服务的配置信息，如：实例数、安全组、听云、资源配置等。具体看下图：
 
-![image](./images/coding_cd_k8s_env.png)
+![image](../images/coding_cd_k8s_env.png)
 
-![image](./images/coding_cd_k8s_jvm.png)
+![image](../images/coding_cd_k8s_jvm.png)
 
 * 创建版本，如下输入版本号、版本标题、选择对应的镜像后点发布即可。
 
-![image](./images/coding_cd_k8s_version.png)
+![image](../images/coding_cd_k8s_version.png)
