--- a/content/zh-cn/docs/04_devmanual/运行与测试.md
+++ b/content/zh-cn/docs/04_devmanual/运行与测试.md
@@ -19,68 +19,68 @@ git clone https://github.com/macula-projects/macula-samples.git
 
 idea打开项目
 
-![image](./images/idea_open_project.png)
+![image](../images/idea_open_project.png)
 
 加载maven，创建新service
 
-![image](./images/idea_create_archetype.png)
+![image](../images/idea_create_archetype.png)
 
 在根目录pom.xml修改module配置
 
-![image](./images/idea_add_module.png)
+![image](../images/idea_add_module.png)
 
 创建service的基础依赖api
 
-![image](./images/idea_create_archetype_2.png)
+![image](../images/idea_create_archetype_2.png)
 
 添加相关依赖编写相关代码，如：创建服务模块所述
 
 ## （2）启动服务
 
-![image](./images/idea_gateway_started.png)
+![image](../images/idea_gateway_started.png)
 
-![image](./images/idea_service_started.png)
+![image](../images/idea_service_started.png)
 
 ## （3）API测试
 
 关闭security拦截
 
-![image](./images/idea_gateway_ingore_security_url.png)
+![image](../images/idea_gateway_ingore_security_url.png)
 
 测试无拦截api
 
-![image](./images/test_api_by_apifox.png)
+![image](../images/test_api_by_apifox.png)
 
 打开security拦截
 
-![image](./images/idea_service_ingore_security_url.png)
+![image](../images/idea_service_ingore_security_url.png)
 
 通过gw进行api测试
 
 先获取access_token然后将access_token写入请求头请求资源访问
 
-![image](./images/test_api_by_apifox_2.png)
+![image](../images/test_api_by_apifox_2.png)
 
-![image](./images/test_api_by_apifox_3.png)
+![image](../images/test_api_by_apifox_3.png)
 
 ## （4）集成测试
 
 通过macula平台配置相关菜单
 
-![image](./images/test_macula_v5_sample_1.png)
+![image](../images/test_macula_v5_sample_1.png)
 
 通过macula平台用户管理分配角色
 
-![image](./images/test_macula_v5_sample_2.png)
+![image](../images/test_macula_v5_sample_2.png)
 
 通过macula平台授权角色
 
-![image](./images/test_macula_v5_sample_3.png)
+![image](../images/test_macula_v5_sample_3.png)
 
 sample应用登录进入主页
 
-![image](./images/test_macula_v5_sample_4.png)
+![image](../images/test_macula_v5_sample_4.png)
 
 sample应用进入应用管理
 
-![image](./images/test_macula_v5_sample_5.png)
+![image](../images/test_macula_v5_sample_5.png)
