去除相关敏感信息

--- a/content/zh-cn/docs/04_devmanual/创建应用平台.md
+++ b/content/zh-cn/docs/04_devmanual/创建应用平台.md
@@ -86,7 +86,7 @@ if (item.meta.hidden || item.meta.type == "BUTTON") {
 ```text
 VITE_APP_IAM_URL=http://localhost:9010
 改为：
-VITE_APP_IAM_URL=https://goauth-dev.infinitus.com.cn
+VITE_APP_IAM_URL=iam认证服务的真实地址（默认使用macula-cloud-iam项目的启动则为http://localhost:9010）
 ```
 
 * 修改macula-samples-gateway项目共享redis和introspection接口地址：
@@ -105,9 +105,9 @@ spring:
     oauth2:
       resourceserver:
         opaquetoken:
-          client-id: *****
-          client-secret: *****
-          introspection-uri: https://goauth-dev.infinitus.com.cn/oauth2/introspect
+          client-id: ***** ##（iam认证服务的客户端id，可看sys_oauth2_client表的client_id字段）
+          client-secret: ***** ##（iam认证服务的客户端密码，可看sys_oauth2_client表的client_secret字段）
+          introspection-uri: ## iam认证服务的token认证角色真实地址（默认使用macula-cloud-iam项目的启动则为http://localhost:9010/oauth2/introspect）
 ```
 
 * 初始化数据库表
