--- a/content/zh-cn/docs/04_devmanual/运行与测试.md
+++ b/content/zh-cn/docs/04_devmanual/运行与测试.md
@@ -10,7 +10,20 @@ weight: 7
 
 ## （1）准备工作
 
-拉取github macula-samples
+使用脚手架构创建macula-samples，如下所示：
+
+```bash
+mvn archetype:generate \
+    -DgroupId=dev.macula.samples	\	# 你的应用的GroupID
+    -DartifactId=macula-samples	\	# 你的应用的ArtifactId
+    -Dversion=1.0.0-SNAPSHOT \		# 你的应用的版本号
+    -DarchetypeArtifactId=macula-boot-archetype \ 
+    -DarchetypeGroupId=dev.macula.boot \
+    -DarchetypeVersion=5.0.6 \
+    -Dgitignore=.gitignore -DinteractiveMode=false
+```
+
+或者拉取github macula-samples
 
 ```bash
 ## samples代码
